--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "babel-loader": "^8.0.4",
     "flow-bin": "^0.86.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.10.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "css-loader": "^1.0.1",
+    "material-icons": "^0.2.3",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1"
   }
 }
