--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "file-loader": "^2.0.0",
     "flow-bin": "^0.86.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   },
